// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaList /> should render correctly in grid view 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <div
      class="sc-bcXGCL gZCPCS"
    >
      <div
        class="sc-bcXGCL iRxvDk"
      >
        <img
          class="sc-bcXGCL gzUCuU"
          src="/media/1.png"
        />
        <div
          class="sc-bcXGCL gmffPW"
        >
          <div
            class="sc-bcXGCL jzSaXv"
          >
            <div
              class="sc-bcXGCL jWSPbb cap-buttonGroup"
            >
              <button
                aria-describedby=":rg:"
                aria-label="global.more"
                class="sc-bcXGCL cxVtKf cap-buttonQuickAction"
                style="margin-left: 0px; margin-top: 0px;"
              >
                <svg
                  aria-hidden="true"
                  class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 10 6"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M.19 2.505C1.355 1.222 3.208-.03 5 0 6.79-.03 8.643 1.222 9.81 2.505a.74.74 0 0 1 0 .989C8.67 4.749 6.822 6.03 5 5.999 3.176 6.03 1.33 4.75.19 3.494a.74.74 0 0 1 0-.99m6.195 1.421a1.667 1.667 0 1 0-2.771-1.853 1.667 1.667 0 0 0 2.771 1.853"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <div
                style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
              >
                <div
                  class="cap-tooltip"
                  data-dialog=""
                  data-placing="true"
                  hidden=""
                  id=":rg:"
                  role="tooltip"
                  style="position: relative; z-index: 1800; display: none;"
                  tabindex="-1"
                >
                  <div
                    aria-hidden="true"
                    style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                  >
                    <svg
                      display="block"
                      viewBox="0 0 30 30"
                    >
                      <g
                        transform="rotate(180 15 15)"
                      >
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          fill="none"
                          mask="url(#:r12:)"
                        />
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          stroke="none"
                        />
                        <mask
                          id=":r12:"
                          maskUnits="userSpaceOnUse"
                        >
                          <rect
                            fill="white"
                            height="30"
                            stroke="black"
                            width="60"
                            x="-15"
                            y="0"
                          />
                        </mask>
                      </g>
                    </svg>
                  </div>
                  <div
                    class="sc-bcXGCL bdghCN"
                  >
                    global.more
                  </div>
                </div>
              </div>
              <button
                aria-describedby=":rj:"
                aria-label="copy-link"
                class="sc-bcXGCL cxVtKf cap-buttonQuickAction"
              >
                <svg
                  aria-hidden="true"
                  class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m3.666 8.333 4.665-4.665M4.103 6.01a1.99 1.99 0 0 0-1.518.578l-1 1a2 2 0 0 0 2.828 2.827l1-1a1.99 1.99 0 0 0 .577-1.518M7.892 5.99a1.99 1.99 0 0 0 1.518-.577l1-1a2 2 0 0 0-2.827-2.827l-1 1a1.99 1.99 0 0 0-.575 1.517"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="0.8"
                  />
                </svg>
              </button>
              <div
                style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
              >
                <div
                  class="cap-tooltip"
                  data-dialog=""
                  data-placing="true"
                  hidden=""
                  id=":rj:"
                  role="tooltip"
                  style="position: relative; z-index: 1800; display: none;"
                  tabindex="-1"
                >
                  <div
                    aria-hidden="true"
                    style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                  >
                    <svg
                      display="block"
                      viewBox="0 0 30 30"
                    >
                      <g
                        transform="rotate(180 15 15)"
                      >
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          fill="none"
                          mask="url(#:r13:)"
                        />
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          stroke="none"
                        />
                        <mask
                          id=":r13:"
                          maskUnits="userSpaceOnUse"
                        >
                          <rect
                            fill="white"
                            height="30"
                            stroke="black"
                            width="60"
                            x="-15"
                            y="0"
                          />
                        </mask>
                      </g>
                    </svg>
                  </div>
                  <div
                    class="sc-bcXGCL bdghCN"
                  >
                    copy-link
                  </div>
                </div>
              </div>
              <button
                aria-describedby=":rm:"
                aria-label="global.delete"
                class="sc-bcXGCL iDqdWa cap-buttonQuickAction"
              >
                <svg
                  aria-hidden="true"
                  class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.091 3.75H1.909a.3.3 0 0 0-.193.073.24.24 0 0 0-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 0 0 .32-.707V4a.24.24 0 0 0-.08-.177.3.3 0 0 0-.193-.073m-5.045 6.5a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11.212.04.289.11a.36.36 0 0 1 .12.265zm2.727 0a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11s.212.04.289.11a.36.36 0 0 1 .12.265zM11.455 2H8.863a.14.14 0 0 1-.097-.037.12.12 0 0 1-.04-.088V1.25a1.2 1.2 0 0 0-.4-.884A1.43 1.43 0 0 0 7.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 0 0-.4.884v.625a.12.12 0 0 1-.04.088.14.14 0 0 1-.096.037H.546a.57.57 0 0 0-.386.146A.48.48 0 0 0 0 2.5c0 .133.057.26.16.354A.57.57 0 0 0 .545 3h10.91a.57.57 0 0 0 .385-.146A.48.48 0 0 0 12 2.5a.48.48 0 0 0-.16-.354.57.57 0 0 0-.386-.146m-7.091-.125V1.25a.24.24 0 0 1 .08-.177A.3.3 0 0 1 4.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 0 1 .08.177v.625a.12.12 0 0 1-.04.088A.14.14 0 0 1 7.5 2h-3a.14.14 0 0 1-.096-.037.12.12 0 0 1-.04-.088"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <div
                style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
              >
                <div
                  class="cap-tooltip"
                  data-dialog=""
                  data-placing="true"
                  hidden=""
                  id=":rm:"
                  role="tooltip"
                  style="position: relative; z-index: 1800; display: none;"
                  tabindex="-1"
                >
                  <div
                    aria-hidden="true"
                    style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                  >
                    <svg
                      display="block"
                      viewBox="0 0 30 30"
                    >
                      <g
                        transform="rotate(180 15 15)"
                      >
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          fill="none"
                          mask="url(#:r14:)"
                        />
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          stroke="none"
                        />
                        <mask
                          id=":r14:"
                          maskUnits="userSpaceOnUse"
                        >
                          <rect
                            fill="white"
                            height="30"
                            stroke="black"
                            width="60"
                            x="-15"
                            y="0"
                          />
                        </mask>
                      </g>
                    </svg>
                  </div>
                  <div
                    class="sc-bcXGCL bdghCN"
                  >
                    global.delete
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bcXGCL hMrLTp"
          >
            <div
              class="sc-bcXGCL fdboPV"
            >
              <div
                aria-label="Tag 200x200px"
                class="sc-bcXGCL bSlWSg cap-tag"
                style="margin-left: 0px; margin-top: 0px;"
                title="200x200px"
              >
                200x200px
              </div>
              <div
                aria-label="Tag 39ko"
                class="sc-bcXGCL bSlWSg cap-tag"
                title="39ko"
              >
                39ko
              </div>
              <div
                aria-label="Tag png"
                class="sc-bcXGCL bSlWSg cap-tag"
                title="png"
              >
                png
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-bcXGCL iRxvDk"
      >
        <img
          class="sc-bcXGCL gzUCuU"
          src="/media/2.png"
        />
        <div
          class="sc-bcXGCL gmffPW"
        >
          <div
            class="sc-bcXGCL jzSaXv"
          >
            <div
              class="sc-bcXGCL jWSPbb cap-buttonGroup"
            >
              <button
                aria-describedby=":rp:"
                aria-label="global.more"
                class="sc-bcXGCL cxVtKf cap-buttonQuickAction"
                style="margin-left: 0px; margin-top: 0px;"
              >
                <svg
                  aria-hidden="true"
                  class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 10 6"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M.19 2.505C1.355 1.222 3.208-.03 5 0 6.79-.03 8.643 1.222 9.81 2.505a.74.74 0 0 1 0 .989C8.67 4.749 6.822 6.03 5 5.999 3.176 6.03 1.33 4.75.19 3.494a.74.74 0 0 1 0-.99m6.195 1.421a1.667 1.667 0 1 0-2.771-1.853 1.667 1.667 0 0 0 2.771 1.853"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <div
                style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
              >
                <div
                  class="cap-tooltip"
                  data-dialog=""
                  data-placing="true"
                  hidden=""
                  id=":rp:"
                  role="tooltip"
                  style="position: relative; z-index: 1800; display: none;"
                  tabindex="-1"
                >
                  <div
                    aria-hidden="true"
                    style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                  >
                    <svg
                      display="block"
                      viewBox="0 0 30 30"
                    >
                      <g
                        transform="rotate(180 15 15)"
                      >
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          fill="none"
                          mask="url(#:r15:)"
                        />
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          stroke="none"
                        />
                        <mask
                          id=":r15:"
                          maskUnits="userSpaceOnUse"
                        >
                          <rect
                            fill="white"
                            height="30"
                            stroke="black"
                            width="60"
                            x="-15"
                            y="0"
                          />
                        </mask>
                      </g>
                    </svg>
                  </div>
                  <div
                    class="sc-bcXGCL bdghCN"
                  >
                    global.more
                  </div>
                </div>
              </div>
              <button
                aria-describedby=":rs:"
                aria-label="copy-link"
                class="sc-bcXGCL cxVtKf cap-buttonQuickAction"
              >
                <svg
                  aria-hidden="true"
                  class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m3.666 8.333 4.665-4.665M4.103 6.01a1.99 1.99 0 0 0-1.518.578l-1 1a2 2 0 0 0 2.828 2.827l1-1a1.99 1.99 0 0 0 .577-1.518M7.892 5.99a1.99 1.99 0 0 0 1.518-.577l1-1a2 2 0 0 0-2.827-2.827l-1 1a1.99 1.99 0 0 0-.575 1.517"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="0.8"
                  />
                </svg>
              </button>
              <div
                style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
              >
                <div
                  class="cap-tooltip"
                  data-dialog=""
                  data-placing="true"
                  hidden=""
                  id=":rs:"
                  role="tooltip"
                  style="position: relative; z-index: 1800; display: none;"
                  tabindex="-1"
                >
                  <div
                    aria-hidden="true"
                    style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                  >
                    <svg
                      display="block"
                      viewBox="0 0 30 30"
                    >
                      <g
                        transform="rotate(180 15 15)"
                      >
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          fill="none"
                          mask="url(#:r16:)"
                        />
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          stroke="none"
                        />
                        <mask
                          id=":r16:"
                          maskUnits="userSpaceOnUse"
                        >
                          <rect
                            fill="white"
                            height="30"
                            stroke="black"
                            width="60"
                            x="-15"
                            y="0"
                          />
                        </mask>
                      </g>
                    </svg>
                  </div>
                  <div
                    class="sc-bcXGCL bdghCN"
                  >
                    copy-link
                  </div>
                </div>
              </div>
              <button
                aria-describedby=":rv:"
                aria-label="global.delete"
                class="sc-bcXGCL iDqdWa cap-buttonQuickAction"
              >
                <svg
                  aria-hidden="true"
                  class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.091 3.75H1.909a.3.3 0 0 0-.193.073.24.24 0 0 0-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 0 0 .32-.707V4a.24.24 0 0 0-.08-.177.3.3 0 0 0-.193-.073m-5.045 6.5a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11.212.04.289.11a.36.36 0 0 1 .12.265zm2.727 0a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11s.212.04.289.11a.36.36 0 0 1 .12.265zM11.455 2H8.863a.14.14 0 0 1-.097-.037.12.12 0 0 1-.04-.088V1.25a1.2 1.2 0 0 0-.4-.884A1.43 1.43 0 0 0 7.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 0 0-.4.884v.625a.12.12 0 0 1-.04.088.14.14 0 0 1-.096.037H.546a.57.57 0 0 0-.386.146A.48.48 0 0 0 0 2.5c0 .133.057.26.16.354A.57.57 0 0 0 .545 3h10.91a.57.57 0 0 0 .385-.146A.48.48 0 0 0 12 2.5a.48.48 0 0 0-.16-.354.57.57 0 0 0-.386-.146m-7.091-.125V1.25a.24.24 0 0 1 .08-.177A.3.3 0 0 1 4.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 0 1 .08.177v.625a.12.12 0 0 1-.04.088A.14.14 0 0 1 7.5 2h-3a.14.14 0 0 1-.096-.037.12.12 0 0 1-.04-.088"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <div
                style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
              >
                <div
                  class="cap-tooltip"
                  data-dialog=""
                  data-placing="true"
                  hidden=""
                  id=":rv:"
                  role="tooltip"
                  style="position: relative; z-index: 1800; display: none;"
                  tabindex="-1"
                >
                  <div
                    aria-hidden="true"
                    style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                  >
                    <svg
                      display="block"
                      viewBox="0 0 30 30"
                    >
                      <g
                        transform="rotate(180 15 15)"
                      >
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          fill="none"
                          mask="url(#:r17:)"
                        />
                        <path
                          d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                          stroke="none"
                        />
                        <mask
                          id=":r17:"
                          maskUnits="userSpaceOnUse"
                        >
                          <rect
                            fill="white"
                            height="30"
                            stroke="black"
                            width="60"
                            x="-15"
                            y="0"
                          />
                        </mask>
                      </g>
                    </svg>
                  </div>
                  <div
                    class="sc-bcXGCL bdghCN"
                  >
                    global.delete
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bcXGCL hMrLTp"
          >
            <div
              class="sc-bcXGCL fdboPV"
            >
              <div
                aria-label="Tag 100x300px"
                class="sc-bcXGCL bSlWSg cap-tag"
                style="margin-left: 0px; margin-top: 0px;"
                title="100x300px"
              >
                100x300px
              </div>
              <div
                aria-label="Tag 29ko"
                class="sc-bcXGCL bSlWSg cap-tag"
                title="29ko"
              >
                29ko
              </div>
              <div
                aria-label="Tag png"
                class="sc-bcXGCL bSlWSg cap-tag"
                title="png"
              >
                png
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<MediaList /> should render correctly in list view 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="sc-bcXGCL flZWmU"
  >
    <div
      class="sc-bcXGCL gGWHIo"
    >
      <table
        class="sc-bcXGCL gGWHIo"
      >
        <thead
          class="sc-bcXGCL caJRro"
        >
          <tr
            class="sc-bcXGCL eUkqFA cap-table__tr"
          >
            <th
              class="sc-bcXGCL lckfeQ cap-table__th"
            >
              <span
                class="sc-bcXGCL hGudve cap-visuallyHidden"
                style="clip: rect(0px, 0px, 0px, 0px); white-space: nowrap;"
              >
                <label
                  aria-label="Select all lines"
                  for="allRows"
                />
              </span>
              <input
                class="all-rows-checkbox"
                id="allRows"
                type="checkbox"
              />
            </th>
            <th
              class="sc-bcXGCL iEaAye cap-table__th"
            >
              global.media
            </th>
            <th
              class="sc-bcXGCL iEaAye cap-table__th"
            >
              global.preview
            </th>
            <th
              class="sc-bcXGCL iEaAye cap-table__th"
            >
              editor.media.size
            </th>
            <th
              class="sc-bcXGCL iEaAye cap-table__th"
            >
              table-head-label
            </th>
            <th
              class="sc-bcXGCL iEaAye cap-table__th"
            >
              mediator.add_date
            </th>
            <th
              class="sc-bcXGCL iEaAye cap-table__th"
            />
          </tr>
        </thead>
        <tbody
          class="sc-bcXGCL cqfhNk cap-table__tbody"
        >
          <tr
            class="sc-bcXGCL eozKTK cap-table__tr"
            id="UG9zdDpwb3N0MTI="
          >
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              <input
                class="sc-bcXGCL keKWCf"
                id="checkbox-UG9zdDpwb3N0MTI="
                type="checkbox"
              />
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              Media 1
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              <div
                class="sc-bcXGCL ckwaKj"
              >
                <img
                  class="sc-bcXGCL cbmOzt"
                  loading="lazy"
                  src="/media/1.png"
                />
                <button
                  class="sc-bcXGCL fNPknx"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua eJFcEs hQQZty cap-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 10 6"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M.19 2.505C1.355 1.222 3.208-.03 5 0 6.79-.03 8.643 1.222 9.81 2.505a.74.74 0 0 1 0 .989C8.67 4.749 6.822 6.03 5 5.999 3.176 6.03 1.33 4.75.19 3.494a.74.74 0 0 1 0-.99m6.195 1.421a1.667 1.667 0 1 0-2.771-1.853 1.667 1.667 0 0 0 2.771 1.853"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              200 x 200 px
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              39ko
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              Invalid date
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              <div
                class="sc-bcXGCL jWSPbb cap-buttonGroup"
              >
                <button
                  aria-describedby=":r0:"
                  aria-label="copy-link"
                  class="sc-bcXGCL cxVtKf cap-buttonQuickAction"
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 12"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m3.666 8.333 4.665-4.665M4.103 6.01a1.99 1.99 0 0 0-1.518.578l-1 1a2 2 0 0 0 2.828 2.827l1-1a1.99 1.99 0 0 0 .577-1.518M7.892 5.99a1.99 1.99 0 0 0 1.518-.577l1-1a2 2 0 0 0-2.827-2.827l-1 1a1.99 1.99 0 0 0-.575 1.517"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="0.8"
                    />
                  </svg>
                </button>
                <div
                  style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
                >
                  <div
                    class="cap-tooltip"
                    data-dialog=""
                    data-placing="true"
                    hidden=""
                    id=":r0:"
                    role="tooltip"
                    style="position: relative; z-index: 1800; display: none;"
                    tabindex="-1"
                  >
                    <div
                      aria-hidden="true"
                      style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            fill="none"
                            mask="url(#:rc:)"
                          />
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            stroke="none"
                          />
                          <mask
                            id=":rc:"
                            maskUnits="userSpaceOnUse"
                          >
                            <rect
                              fill="white"
                              height="30"
                              stroke="black"
                              width="60"
                              x="-15"
                              y="0"
                            />
                          </mask>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="sc-bcXGCL bdghCN"
                    >
                      copy-link
                    </div>
                  </div>
                </div>
                <button
                  aria-describedby=":r3:"
                  aria-label="global.delete"
                  class="sc-bcXGCL iDqdWa cap-buttonQuickAction"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 12"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.091 3.75H1.909a.3.3 0 0 0-.193.073.24.24 0 0 0-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 0 0 .32-.707V4a.24.24 0 0 0-.08-.177.3.3 0 0 0-.193-.073m-5.045 6.5a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11.212.04.289.11a.36.36 0 0 1 .12.265zm2.727 0a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11s.212.04.289.11a.36.36 0 0 1 .12.265zM11.455 2H8.863a.14.14 0 0 1-.097-.037.12.12 0 0 1-.04-.088V1.25a1.2 1.2 0 0 0-.4-.884A1.43 1.43 0 0 0 7.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 0 0-.4.884v.625a.12.12 0 0 1-.04.088.14.14 0 0 1-.096.037H.546a.57.57 0 0 0-.386.146A.48.48 0 0 0 0 2.5c0 .133.057.26.16.354A.57.57 0 0 0 .545 3h10.91a.57.57 0 0 0 .385-.146A.48.48 0 0 0 12 2.5a.48.48 0 0 0-.16-.354.57.57 0 0 0-.386-.146m-7.091-.125V1.25a.24.24 0 0 1 .08-.177A.3.3 0 0 1 4.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 0 1 .08.177v.625a.12.12 0 0 1-.04.088A.14.14 0 0 1 7.5 2h-3a.14.14 0 0 1-.096-.037.12.12 0 0 1-.04-.088"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <div
                  style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
                >
                  <div
                    class="cap-tooltip"
                    data-dialog=""
                    data-placing="true"
                    hidden=""
                    id=":r3:"
                    role="tooltip"
                    style="position: relative; z-index: 1800; display: none;"
                    tabindex="-1"
                  >
                    <div
                      aria-hidden="true"
                      style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            fill="none"
                            mask="url(#:rd:)"
                          />
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            stroke="none"
                          />
                          <mask
                            id=":rd:"
                            maskUnits="userSpaceOnUse"
                          >
                            <rect
                              fill="white"
                              height="30"
                              stroke="black"
                              width="60"
                              x="-15"
                              y="0"
                            />
                          </mask>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="sc-bcXGCL bdghCN"
                    >
                      global.delete
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="sc-bcXGCL eozKTK cap-table__tr"
            id="UG9zdDpwb3N0MTL="
          >
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              <input
                class="sc-bcXGCL keKWCf"
                id="checkbox-UG9zdDpwb3N0MTL="
                type="checkbox"
              />
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              Media 2
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              <div
                class="sc-bcXGCL ckwaKj"
              >
                <img
                  class="sc-bcXGCL cbmOzt"
                  loading="lazy"
                  src="/media/2.png"
                />
                <button
                  class="sc-bcXGCL fNPknx"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua eJFcEs hQQZty cap-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 10 6"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M.19 2.505C1.355 1.222 3.208-.03 5 0 6.79-.03 8.643 1.222 9.81 2.505a.74.74 0 0 1 0 .989C8.67 4.749 6.822 6.03 5 5.999 3.176 6.03 1.33 4.75.19 3.494a.74.74 0 0 1 0-.99m6.195 1.421a1.667 1.667 0 1 0-2.771-1.853 1.667 1.667 0 0 0 2.771 1.853"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              100 x 300 px
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              29ko
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              Invalid date
            </td>
            <td
              class="sc-bcXGCL TOCat cap-table__td"
              style="white-space: initial;"
            >
              <div
                class="sc-bcXGCL jWSPbb cap-buttonGroup"
              >
                <button
                  aria-describedby=":r6:"
                  aria-label="copy-link"
                  class="sc-bcXGCL cxVtKf cap-buttonQuickAction"
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 12"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m3.666 8.333 4.665-4.665M4.103 6.01a1.99 1.99 0 0 0-1.518.578l-1 1a2 2 0 0 0 2.828 2.827l1-1a1.99 1.99 0 0 0 .577-1.518M7.892 5.99a1.99 1.99 0 0 0 1.518-.577l1-1a2 2 0 0 0-2.827-2.827l-1 1a1.99 1.99 0 0 0-.575 1.517"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="0.8"
                    />
                  </svg>
                </button>
                <div
                  style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
                >
                  <div
                    class="cap-tooltip"
                    data-dialog=""
                    data-placing="true"
                    hidden=""
                    id=":r6:"
                    role="tooltip"
                    style="position: relative; z-index: 1800; display: none;"
                    tabindex="-1"
                  >
                    <div
                      aria-hidden="true"
                      style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            fill="none"
                            mask="url(#:re:)"
                          />
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            stroke="none"
                          />
                          <mask
                            id=":re:"
                            maskUnits="userSpaceOnUse"
                          >
                            <rect
                              fill="white"
                              height="30"
                              stroke="black"
                              width="60"
                              x="-15"
                              y="0"
                            />
                          </mask>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="sc-bcXGCL bdghCN"
                    >
                      copy-link
                    </div>
                  </div>
                </div>
                <button
                  aria-describedby=":r9:"
                  aria-label="global.delete"
                  class="sc-bcXGCL iDqdWa cap-buttonQuickAction"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-buttonQuickAction-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 12"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.091 3.75H1.909a.3.3 0 0 0-.193.073.24.24 0 0 0-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 0 0 .32-.707V4a.24.24 0 0 0-.08-.177.3.3 0 0 0-.193-.073m-5.045 6.5a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11.212.04.289.11a.36.36 0 0 1 .12.265zm2.727 0a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11s.212.04.289.11a.36.36 0 0 1 .12.265zM11.455 2H8.863a.14.14 0 0 1-.097-.037.12.12 0 0 1-.04-.088V1.25a1.2 1.2 0 0 0-.4-.884A1.43 1.43 0 0 0 7.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 0 0-.4.884v.625a.12.12 0 0 1-.04.088.14.14 0 0 1-.096.037H.546a.57.57 0 0 0-.386.146A.48.48 0 0 0 0 2.5c0 .133.057.26.16.354A.57.57 0 0 0 .545 3h10.91a.57.57 0 0 0 .385-.146A.48.48 0 0 0 12 2.5a.48.48 0 0 0-.16-.354.57.57 0 0 0-.386-.146m-7.091-.125V1.25a.24.24 0 0 1 .08-.177A.3.3 0 0 1 4.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 0 1 .08.177v.625a.12.12 0 0 1-.04.088A.14.14 0 0 1 7.5 2h-3a.14.14 0 0 1-.096-.037.12.12 0 0 1-.04-.088"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <div
                  style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
                >
                  <div
                    class="cap-tooltip"
                    data-dialog=""
                    data-placing="true"
                    hidden=""
                    id=":r9:"
                    role="tooltip"
                    style="position: relative; z-index: 1800; display: none;"
                    tabindex="-1"
                  >
                    <div
                      aria-hidden="true"
                      style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            fill="none"
                            mask="url(#:rf:)"
                          />
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            stroke="none"
                          />
                          <mask
                            id=":rf:"
                            maskUnits="userSpaceOnUse"
                          >
                            <rect
                              fill="white"
                              height="30"
                              stroke="black"
                              width="60"
                              x="-15"
                              y="0"
                            />
                          </mask>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="sc-bcXGCL bdghCN"
                    >
                      global.delete
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
